# solana-defi-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RENDER_DEPLOYMENT.md  SECURITY.md  docker-compose.yml  metadata-template.json  metadata.json  package-lock.json  package.json  pnpm-workspace.yaml  render.yaml  rust-toolchain.toml
.github/workflows/: anchor-test-fix.sh  cd.yml  ci.yml  keep-alive.yml
backend/: .dockerignore  .eslintrc.json  Dockerfile  README.md  env.template  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
backend/scripts/: debug-account.ts  init-registry-simple.ts  init-registry-web3.ts  update-metadata.ts
backend/src/: container.ts  env.test.ts  env.ts  index.ts  server.ts
backend/storage/: ci-status.json
blockchain/: Anchor.toml  Cargo.toml  README.md  eslint.config.mjs  package.json  tsconfig.json
blockchain/.cargo/: config.toml
blockchain/fuzz/: .gitkeep  README.md
blockchain/programs/audit_registry/: Cargo.toml
blockchain/programs/audit_registry/src/: lib.rs
blockchain/tests/: init-registry.spec.ts  registry.spec.ts
docs/: API.md  APPLICATION_MATERIALS.md  ARCHITECTURE.md  CD_SETUP.md  DEVELOPMENT.md  TESTING.md
frontend/: .dockerignore  .eslintrc.json  Dockerfile  README.md  env.template  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx  (+3 more)
scripts/: run-devnet.md  start-devnet.sh  test-docker.sh  verify-setup.sh
(+32 files in other folders)
