[package]
name = "audit_registry"
version = "0.1.0"
description = "Registry program enforcing audit readiness metadata"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true }
solana-program = "=1.17.15"

[features]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]
cpi = ["no-entrypoint"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-log-ix-name = []
default = []

